<resources>
    <string name="app_name">PortfolioProject</string>

    <string name="core_menu_title">My Portfolio Apps</string>
    <string name="popular_movies" translatable="false">Popular Movies App</string>
    <string name="scores_app" translatable="false">Scores App</string>
    <string name="library_app" translatable="false">Library App</string>
    <string name="build_it_bigger" translatable="false">Build It Bigger</string>
    <string name="xyz_reader" translatable="false">XYZ Reader</string>
    <string name="capstone_project" translatable="false">Capstone Project</string>

    <string name="title_activity_video_grid">List of Movies</string>
    <string name="sorting_order">Change sorting order</string>
    <string name="title_activity_movie_detail">Movie details</string>
    <string name="action_settings">Settings</string>

    <string name="sorting_type">Sort movies by</string>
    <string name="sorting_type_key">sorting_type</string>
    <string name="sorting_type_popularity">Popularity</string>
    <string name="sorting_type_top_rated">Rating</string>
    <string name="sorting_type_favourites">Favourites</string>
    <string name="mark_favourite">MARK AS FAVOURITE</string>
    <string name="unmark_favourite">UNMARK</string>
    <string name="share_trailer_menu_item_label">Share trailer</string>

    <string name="duration_format">%d min</string>
    <string name="movie_poster">Movie poster</string>

</resources>
