<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".CoreMenu">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/core_menu_header"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:text="@string/popular_movies"
        android:id="@+id/app1LaunchButton"
        android:layout_below="@id/textView"
        android:onClick="showMessage"
        android:layout_marginTop="40dp"
        android:background="@color/firstAppMainColor"
        style="@style/AppLaunchButton"/>

    <Button
        android:text="@string/scores_app"
        android:id="@+id/app2LaunchButton"
        android:onClick="showMessage"
        android:layout_below="@id/app1LaunchButton"
        android:background="@color/secondAppMainColor"
        style="@style/AppLaunchButton"/>

    <Button
        android:text="@string/library_app"
        android:id="@+id/app3LaunchButton"
        android:onClick="showMessage"
        android:layout_below="@id/app2LaunchButton"
        android:background="@color/thirdAppMainColor"
        style="@style/AppLaunchButton"/>

    <Button
        android:text="@string/build_it_bigger"
        android:id="@+id/app4LaunchButton"
        android:layout_below="@id/app3LaunchButton"
        android:background="@color/forthAppMainColor"
        style="@style/AppLaunchButton"/>

    <Button
        android:text="@string/xyz_reader"
        android:id="@+id/app5LaunchButton"
        android:layout_below="@id/app4LaunchButton"
        android:background="@color/fifthAppMainColor"
        style="@style/AppLaunchButton"/>

    <Button
        android:text="@string/capstone_project"
        android:id="@+id/app6LaunchButton"
        android:layout_below="@id/app5LaunchButton"
        android:textColor="@color/white"
        android:background="@color/sixthAppMainColor"
        style="@style/AppLaunchButton"/>
</RelativeLayout>
